BLD: typing-extensions + recipe fixup

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,17 +22,14 @@ env:
     - CONDA_REQUIREMENTS="dev-requirements.txt"
 
 
-
-# Uncomment this block if you would like to make PIP test an allowed failure
-#jobs:
-#  allow_failures:
-#    # This makes the PIP based Python 3.6 optional for passing.
-#    # Remove this block if passing tests with PIP is mandatory for your
-#    # package
-#    - name: "Python 3.6 - PIP"
+# jobs:
+#   allow_failures:
+#     # This makes the PIP based Python 3.6 optional for passing.
+#     # Remove this block if passing tests with PIP is mandatory for your
+#     # package
+#     - name: "Python - PIP"
 
 import:
-
   - pcdshub/pcds-ci-helpers:travis/shared_configs/standard-python-conda.yml
 
 # If not using the standard-python-conda above please uncomment the required
