--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -20,6 +20,8 @@ requirements:
     - python >=3.7
     - archapp
     - bluesky
+    - bluesky-widgets
+    - bluesky-queueserver
     - ipython
     - numpy
     - ophyd
