--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -19,7 +19,7 @@ requirements:
   run:
     - python >=3.7
     - apischema
-    - archapp
+    - archapp >=1.1.0
     - bluesky
     - bluesky-widgets
     - bluesky-queueserver
