--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,7 +12,7 @@ recursive-include docs *.rst conf.py Makefile make.bat
 include versioneer.py
 include atef/_version.py
 
-include atef/tests/*.json
+recursive-include atef/tests *.json *.yml
 
 # If including data files in the package, add them like:
 # include path/to/data_file
