--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ jobs:
     - name: "Python - PIP"
 
 import:
-  - pcdshub/pcds-ci-helpers:travis/shared_configs/standard-python-conda-latest.yml
+  - klauer/pcds-ci-helpers:travis/shared_configs/standard-python-conda-latest.yml@ref_pytest-cov
