--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -47,8 +47,20 @@ test:
   imports:
   - atef
   requires:
+  - coverage
+  - doctr
+  - docs-versions-menu
+  - numpydoc
+  - flake8
   - pytest
+  - pytest-timeout
+  - pytest-asyncio
+  - pytest-qt
   - pcdsdevices >=7.1.0
+  - sphinx
+  - sphinx-copybutton
+  - sphinx_rtd_theme
+  - sphinxcontrib-jquery
 
 
 
