--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,7 +11,7 @@ recursive-include docs *.rst conf.py Makefile make.bat
 
 include versioneer.py
 include atef/_version.py
-include atef/assets/SLAC_short_red.jpeg
+include atef/assets/SLAC_red.jpeg
 
 recursive-include atef/tests *.json *.yml
 
