--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ archapp>=1.1.0
 bluesky
 bluesky-queueserver>=0.0.19
 bluesky-widgets
-databroker
+# databroker >2 incompatible with pydantic v2
+databroker<2.0.0
 happi
 ipython
 numpy
