BLD: pin numpy<2

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
   - databroker <2.0.0a0
   - happi
   - ipython
-  - numpy
+  - numpy <2.0.0
   - ophyd
   - pcdsutils >=0.14.1
   - pydm
