--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -32,6 +32,7 @@ requirements:
   - databroker <2.0.0a0
   - happi
   - ipython
+  - matplotlib <=3.9.0
   - numpy <2.0.0
   - ophyd
   - pcdsutils >=0.14.1
